--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
-  },
+  "start": "craco start",
+  "build": "CI=false craco build",
+  "test": "craco test",
+  "eject": "react-scripts eject"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
